# alternances-tech-2026

./: ARCHITECTURE.md  CONTRIBUTING.md  LICENSE  README-Inactive.md  README.md  config.json  main.py  pyproject.toml
.github/ISSUE_TEMPLATE/: ajouter_offre.yml  config.yml  signaler_offre.yml
.github/workflows/: contribution.yml  update.yml  validate.yml
data/: listings.json
src/alternance_engine/: categorize.py  contribution.py  dedupe.py  models.py  pipeline.py  render.py  store.py
src/alternance_engine/connectors/: la_bonne_alternance.py
templates/: README.template.md
tests/: test_engine.py
